--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <table class="table table-stripped table-bordered text-light my-3">
+        <table class="table table-stripped table-bordered my-3">
             <thead>
                 <tr>
                     <th scope="col">Productos</th>
