--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -1,14 +1,19 @@
-<% products.forEach((product)=> { %>
+<% if( products.status == 'inactive'){ %>
+    <%- include('include/error402') %>
+<% } else { %>
     <div class="container my-3">
         <div class="row d-flex justify-content-center">
             <div class="col-10">
-                <p class="fs-3 text-center">Crea tu diseño | <%= product.product %></p>
+                <p class="fs-3 text-center">Crea tu diseño | <%= products.product %></p>
                 <div class="d-flex flex-row">
                     <div class="col-8">
                         <canvas id="myCanvas"></canvas>
                     </div>
                     <div class="col-4 my-3">
-                        <div class="row mb-2 px-0">
+                        <div class="row mb-2">
+                            <p class="fs-4 px-0">Precio: $<%= products.price %></p>
+                        </div>
+                        <div class="row mt-2 px-0">
                             <label for="imageURL" class="px-0">Imagen: </label>
                             <input type="file" class="form-control" id="imageURL">
                         </div>
@@ -30,63 +35,82 @@
                                     data-bs-target="#exampleModal">
                                     Hacer pedido
                                 </button>
-    
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                                    aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
+
+                                <% if( products.status == 'No Stock' ){ %>
+                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                          <div class="modal-content">
                                             <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Detalles</h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
+                                              <h1 class="modal-title fs-5" id="exampleModalLabel"><%= products.product %></h1>
+                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
+                                                <p class="fs-4">Producto Fuera de Stock !</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                <% } else { %>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                        aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5" id="exampleModalLabel"><%= products.product %></h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
                                                 <form action="" method="post">
-                                                    <div class="row my-2 mx-2 d-flex align-items-center">
-                                                        <div class="col-3">
-                                                            <label for="inputNumber01">Cantidad: </label>
-                                                            <input type="number" class="form-control pt-2"
-                                                                id="inputNumber01" min="1" name="amount">
+                                                    <div class="modal-body">
+                                                        <div class="row my-2 mx-2 d-flex align-items-center">
+                                                            <div class="col-3">
+                                                                <label for="inputNumber01">Cantidad: </label>
+                                                                <input type="number" class="form-control pt-2"
+                                                                    id="inputNumber01" min="1" name="amount" max="<%= products.stock %>">
+                                                            </div>
+                                                            <div class="col-9">
+                                                                <label for="formFileMultiple" class="form-label">Imagenes:
+                                                                </label>
+                                                                <input class="form-control" type="file" id="formFileMultiple"
+                                                                    multiple name="image">
+                                                            </div>
                                                         </div>
-                                                        <div class="col-9">
-                                                            <label for="formFileMultiple" class="form-label">Imagenes:
-                                                            </label>
-                                                            <input class="form-control" type="file" id="formFileMultiple"
-                                                                multiple name="image">
+                                                        <div class="row my-3 mx-2 d-flex align-items-center">
+                                                            <div
+                                                                class="col-3 d-flex flex-row align-items-center justify-content-between">
+                                                                <label for="exampleColorInput" class="form-label">Color
+                                                                </label>
+                                                                <input type="color" class="form-control form-control-color"
+                                                                    id="exampleColorInput" value="#563d7c"
+                                                                    title="Choose your color" name="color">
+                                                            </div>
+                                                            <div class="col-9 d-flex flex-row align-items-center justify-content-between">
+                                                                <label for="sizes" class="form-label mx-2">Tallas
+                                                                </label>
+                                                                <select class="form-select" id="sizes" aria-label="Default select example">
+                                                                    <option selected>Seleccione una talla</option>
+                                                                    <option value="S">S</option>
+                                                                    <option value="M">M</option>
+                                                                    <option value="L">L</option>
+                                                                    <option value="XL">XL</option>
+                                                                </select>
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                    <div class="row my-3 mx-2 d-flex align-items-center">
-                                                        <div
-                                                            class="col-3 d-flex flex-row align-items-center justify-content-between">
-                                                            <label for="exampleColorInput" class="form-label">Color
-                                                            </label>
-                                                            <input type="color" class="form-control form-control-color"
-                                                                id="exampleColorInput" value="#563d7c"
-                                                                title="Choose your color" name="color">
-                                                        </div>
-                                                        <div class="col-9 d-flex flex-row align-items-center justify-content-between">
-                                                            <label for="sizes" class="form-label mx-2">Tallas
-                                                            </label>
-                                                            <select class="form-select" id="sizes" aria-label="Default select example">
-                                                                <option selected>Seleccione una talla</option>
-                                                                <option value="S">S</option>
-                                                                <option value="M">M</option>
-                                                                <option value="L">L</option>
-                                                                <option value="XL">XL</option>
-                                                            </select>
-                                                        </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-danger"
+                                                            data-bs-dismiss="modal">Close</button>
+                                                        <button type="submit" class="btn btn-success">Enviar</button>
                                                     </div>
                                                 </form>
                                             </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-danger"
-                                                    data-bs-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-success">Enviar</button>
-                                            </div>
                                         </div>
                                     </div>
-                                </div>
+                                <% } %>
                             </div>
                             <div class="collapse px-0" id="collapseExample">
                                 <div class="card card-body d-flex flex-row">
@@ -115,6 +139,7 @@
             </div>
         </div>
     </div>
-<% }) %>
+<% } %>
+
 <script src="/orderDesign.js"></script>
 <script src="/graphic.js"></script>
