--- a/views/comentarios.ejs
+++ b/views/comentarios.ejs
@@ -11,7 +11,7 @@
                         </ol>
                     </nav>
                     <div class="row d-flex align-items-center justify-content-between my-3">
-                        <form action="get" id="search-form">
+                        <form action="post" id="search-form">
                             <div class="col-3 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
                                 <img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png"
                                     alt="search--v1" />
