--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -56,7 +56,7 @@
         <div class="col d-flex justify-content-end align-items-center">
             <input class="form-control w-50 mx-3" list="datalistOptions" id="exampleDataList" placeholder="buscar..." type="text" name="busqueda">
             <datalist id="datalistOptions">
-                <option value="Camisas">
+                <option value="camisas">
             </datalist>
             <% if(user != false ) { %>
                 <% if(user.role == 'admin'){ %>
