--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,7 +1,7 @@
-<div class="row sticky-bottom">
+<div class="row">
     <!-- footer -->
     <footer class="bg-primary d-flex justify-content-around flex-column">
-        <!-- <div class="d-flex flex-row justify-content-around" id="footer-content">
+        <div class="d-flex flex-row justify-content-around" id="footer-content">
             <div class="py-3">
                 <p class="fs-4 fw-bold">Sublisivarte</p>
                 <p class="fs-6 ">Tendencias</p>
@@ -24,7 +24,7 @@
                 <p class="fs-6 ">Instagram</p>
                 <p class="fs-6 ">Correo</p>
             </div>
-        </div> -->
+        </div>
         <div>
             <p class="fs-5 fw-bold  text-center pt-3">© Copyright 2023-2023 Sublisivarte. Todos los Derechos
                 Reservados - Instituto Tecnico Ricaldone</p>
