--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -14,9 +14,9 @@
         <div class="row d-flex align-items-center justify-content-between my-3">
             <div class="col-3 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
                 <img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png"
-                    alt="search--v1" />
-                <input class="form-control w-100 border-0" list="datalistOptions" id="exampleDataList"
-                    placeholder="buscar categoria..." type="text" name="busqueda">
+                    alt="search--v1" onclick="seacrhProduct()" />
+                <input class="form-control w-100 border-0" list="datalistOptions" id="seacrhProduct"
+                    placeholder="buscar producto..." type="text" name="busqueda">
             </div>
             <div class="col-3 d-flex justify-content-end">
                 <!-- Button trigger modal -->
@@ -194,3 +194,5 @@
         </div>
     </div>
 <% } %>
+
+<script src="search.js"></script>
