--- a/views/comentarios.ejs
+++ b/views/comentarios.ejs
@@ -11,19 +11,16 @@
                         </ol>
                     </nav>
                     <div class="row d-flex align-items-center justify-content-between my-3">
-                        <form action="post" id="search-form">
-                            <div class="col-3 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
-                                <img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png"
-                                    alt="search--v1" />
-                                <input class="form-control w-100 border-0" list="datalistOptions" id="search"
-                                    placeholder="Buscar Comentario..." type="text" name="busqueda">
-                                <!-- <button type="button" id="btn-search" class="btn waves-effect green tooltipped"
+                        <div class="col-3 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
+                            <img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png"
+                                alt="search--v1" onclick="searchComment()" />
+                            <input class="form-control w-100 border-0" list="datalistOptions" id="seacrhComment"
+                                placeholder="Buscar Comentario..." type="text" name="busqueda">
+                            <!-- <button type="button" id="btn-search" class="btn waves-effect green tooltipped"
                                     data-tooltip="Buscar">
                                     <img src="https://img.icons8.com/glyph-neue/40/null/ok--v1.png" />
                                 </button> -->
-                            </div>
-                        </form>
-
+                        </div>
                         <div class="col-3 d-flex justify-content-end">
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-dark" data-bs-toggle="modal"
@@ -125,3 +122,5 @@
                 </div>
             </div>
             <% } %>
+
+<script src="search.js"></script>
