--- a/views/comentarios.ejs
+++ b/views/comentarios.ejs
@@ -93,6 +93,7 @@
                                 <th scope="col">Reseña</th>
                                 <th scope="col">Producto</th>
                                 <th scope="col">Cliente</th>
+                                <th scope="col">Estado</th>
                                 <th scope="col">Eliminar</th>
                             </tr>
                         </thead>
@@ -112,7 +113,14 @@
                                         <%= data.client %>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger"><a href="/delete/comments/<%= data._id %>"
+                                        <% if(data.status == 'activo'){ %>
+                                            <button class="btn btn-primary"><a class="text-dark" href="/status/comment/<%= data._id %>/inactivo">Desactivar</a></button>
+                                        <%} else {%>
+                                            <button class="btn btn-primary"><a class="text-dark" href="/status/comment/<%= data._id %>/activo">Activar</a></button>
+                                        <% } %>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-danger"><a href="/delete/comment/<%= data._id %>"
                                                 class="text-light">Eliminar</a></button>
                                     </td>
                                 </tr>
@@ -123,4 +131,4 @@
             </div>
             <% } %>
 
-<script src="search.js"></script>
+                <script src="search.js"></script>
