--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -59,7 +59,7 @@
                                                     <button type="button" class="btn btn-secondary"
                                                         data-bs-dismiss="modal">Cancelar</button>
                                                     <button class="btn btn-danger"><a
-                                                            href="/api/deleteDetail/<%= data._id %>"
+                                                            href="/delete/details/<%= data.product %>/<%= data.amount %>/<%= data._id %>"
                                                             class="text-light text-decoration-none">Eliminar</a></button>
                                                 </div>
                                             </div>
